# syggrel-chat

./: .gitignore  Cargo.toml
src/: main.rs
src/core/: add_contact.rs  buffer.rs  chat_data.rs  messenger.rs  routes.rs
src/database/: db_connection.rs  db_paths.rs  mod.rs  models.rs  schema.rs
src/ui/pages/: home.rs
